k8s/core/security/network-policy/netpol1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol
spec:
  podSelector:
    - matchLabels:
        app: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: backend
      ports:
        - protocol: TCP
          port: 80
